@@ -2,6 +2,8 @@ NEW IN WAF 1.7.10
 -----------------
 * Enhancements in the LaTeX support #1248
 * Codelite plugin by Christian Klein
+* Validate the versioned library number #1180
+* New export_defines keyword for C/C++/Fortran libraries
 
 NEW IN WAF 1.7.9
 ----------------
